[tool.poetry]
name = "fitproject"
version = "0.1.0"
description = ""
authors = ["Agata Tekien <tekienagata@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
black = "^24.10.0"
docker = "^7.1.0"
psycopg2 = "^2.9.10"
python-dotenv = "^1.0.1"
flask-sqlalchemy = "^3.1.1"
flask-jwt-extended = "^4.7.1"
uuid = "^1.30"
isort = "^6.0.0"
pytest = "^8.3.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-flask = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v -s"
pythonpath = ["."]
